--- a/ios/BuildingRN.xcodeproj/xcshareddata/xcschemes/BuildingRN.xcscheme
+++ b/ios/BuildingRN.xcodeproj/xcshareddata/xcschemes/BuildingRN.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "echo &quot;.env&quot; &gt; /tmp/envfile">
+               scriptText = "echo &quot;$NEVERCODE_BUILD_DIR/.env&quot; &gt; /tmp/envfile">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
