--- a/ios/BuildingRN.xcodeproj/xcshareddata/xcschemes/BuildingRN.xcscheme
+++ b/ios/BuildingRN.xcodeproj/xcshareddata/xcschemes/BuildingRN.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "echo &quot;$NEVERCODE_BUILD_DIR/.env&quot; &gt; /tmp/envfile">
+               scriptText = "echo &quot;.env&quot; &gt; /tmp/envfile">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
@@ -143,5 +143,14 @@
    <ArchiveAction
       buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "echo &quot;.env&quot; &gt; /tmp/envfile">
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
    </ArchiveAction>
 </Scheme>
