--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
-		"react-native-config": "^0.5.0"
+		"react-native-config": "^0.5.0",
+		"react-native-onesignal": "^3.0.5"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
