--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
 		"react-native-config": "^0.5.0",
+		"react-native-document-picker": "^2.0.0",
+		"react-native-fetch-blob": "^0.10.8",
+		"react-native-image-crop-picker": "^0.15.3",
 		"react-native-onesignal": "^3.0.5"
 	},
 	"devDependencies": {
