--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,6 +152,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fetch-blob')
+    compile project(':react-native-document-picker')
     compile project(':react-native-onesignal')
     compile project(':react-native-config')
     compile fileTree(dir: "libs", include: ["*.jar"])
