adding Fabric: Crashlytics, Answers

--- a/ios/BuildingRN/Info.plist
+++ b/ios/BuildingRN/Info.plist
@@ -22,12 +22,22 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>921e06b074fdd2155670b878f97a62696ed33e41</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>PermissionMessage</string>
-	<key>NSCameraUsageDescription</key>
-	<string>PermissionMessage</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
@@ -39,8 +49,12 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>PermissionMessage</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>PermissionMessage</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
