--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"run-android": "ENVFILE=.env react-native run-android",
-		"run-ios": "ENVFILE=.env react-native run-ios",
-		"build-android-release": "export ENVFILE=.env.prod && cd android && ./gradlew assembleRelease",
+		"run-android": "react-native run-android",
+		"run-ios": "react-native run-ios",
+		"build-android-release": "cd android && ./gradlew assembleRelease",
 		"test": "jest"
 	},
 	"dependencies": {
@@ -14,6 +14,7 @@
 		"react-native": "^0.47.2",
 		"react-native-config": "^0.6.0",
 		"react-native-document-picker": "^2.0.0",
+		"react-native-fabric": "^0.5.0",
 		"react-native-fetch-blob": "^0.10.8",
 		"react-native-image-crop-picker": "^0.16.0",
 		"react-native-onesignal": "^3.0.5"
