--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "^0.47.2",
 		"react-native-config": "^0.6.0",
-		"react-native-document-picker": "^2.0.0",
+		"react-native-document-picker": "git+https://github.com/mateoKaradza/react-native-document-picker",
 		"react-native-fabric": "^0.5.0",
 		"react-native-fetch-blob": "^0.10.8",
 		"react-native-image-crop-picker": "^0.16.0",
