--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
 		"react-native-fabric": "^0.5.0",
 		"react-native-fetch-blob": "^0.10.8",
 		"react-native-image-crop-picker": "^0.16.0",
-		"react-native-onesignal": "^3.0.5"
+		"react-native-onesignal": "^3.0.5",
+		"react-redux": "^5.0.6",
+		"redux": "^3.7.2",
+		"redux-form": "^7.0.3"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
