--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"prop-types": "^15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "^0.47.2",
 		"react-native-config": "^0.6.0",
@@ -20,7 +21,8 @@
 		"react-native-onesignal": "^3.0.5",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
-		"redux-form": "^7.0.3"
+		"redux-form": "^7.0.3",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
