finished basic form elements

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -168,6 +168,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
     compile project(':react-native-fabric')
     compile project(':react-native-image-crop-picker')
     compile project(':react-native-fetch-blob')
