--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@remobile/react-native-smart-keyboard": "^1.0.0",
 		"prop-types": "^15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "^0.47.2",
@@ -18,7 +19,9 @@
 		"react-native-fabric": "^0.5.0",
 		"react-native-fetch-blob": "^0.10.8",
 		"react-native-image-crop-picker": "^0.16.0",
+		"react-native-keyboard-aware-scroll-view": "^0.3.0",
 		"react-native-onesignal": "^3.0.5",
+		"react-native-vector-icons": "^4.3.0",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
 		"redux-form": "^7.0.3",
