added date and time picker, reformatted rest of the code, added babel module resolver

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-  "presets": ["react-native"]
+  "presets": ["react-native"],
+  "plugins": [
+    ["module-resolver", {
+      "root": ["./src"],
+      "alias": {
+        "utils": "./src/utils",
+        "components": "./src/components",
+        "styles": "./src/styles"
+      },
+      "extensions": [".js"]
+    }]
+  ]
 }
