--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@remobile/react-native-smart-keyboard": "^1.0.0",
+		"moment": "^2.18.1",
 		"prop-types": "^15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "^0.47.2",
@@ -29,9 +30,11 @@
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
+		"babel-plugin-module-resolver": "^2.7.1",
 		"babel-preset-react-native": "2.1.0",
 		"jest": "20.0.4",
-		"react-test-renderer": "16.0.0-alpha.12"
+		"react-test-renderer": "16.0.0-alpha.12",
+		"standard": "^10.0.3"
 	},
 	"jest": {
 		"preset": "react-native"
