--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"prop-types": "^15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "^0.47.2",
+		"react-native-code-push": "^5.0.0-beta",
 		"react-native-config": "^0.6.0",
 		"react-native-document-picker": "git+https://github.com/mateoKaradza/react-native-document-picker",
 		"react-native-fabric": "^0.5.0",
