--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
 		"redux-form": "^7.0.3",
-		"redux-thunk": "^2.2.0"
+		"redux-thunk": "^2.2.0",
+		"whatwg-fetch": "^2.0.3"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
