--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -107,13 +107,13 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
 
     defaultConfig {
         applicationId "com.buildingrn"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
@@ -166,6 +166,9 @@ android {
             }
         }
     }
+    dexOptions {
+        jumboMode true
+    }
 }
 
 dependencies {
@@ -181,6 +184,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-navigation')
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
