--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-native-fetch-blob": "^0.10.8",
 		"react-native-image-crop-picker": "^0.16.0",
 		"react-native-keyboard-aware-scroll-view": "^0.3.0",
+		"react-native-navigation": "^1.1.226",
 		"react-native-onesignal": "^3.0.5",
 		"react-native-vector-icons": "^4.3.0",
 		"react-redux": "^5.0.6",
